--- a/assets/style.css
+++ b/assets/style.css
@@ -10,16 +10,14 @@ header {
     flex-direction: column;
     justify-content: space-around;
     /* align-items: flex-start; */
-    height: 12vh;
+    height: 22vh;
     padding: 4px 4px;
     margin: 2px 2px 2px 2px;
     border: 4px groove rgb(5, 5, 5);
-    text-align: center;
-    font-family: cursive;
-    font-size: larger;
+    /* text-align: center; */
+    font-family: Arial, Helvetica, sans-serif;
     color: rgb(2, 1, 1);
-    text-align: center;
-    background-color: rgb(221, 86, 8);
+    background-color: rgb(15, 0, 148);
     opacity: 0.9;
 
 }
@@ -27,9 +25,10 @@ header {
 
 body {
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEjL-lsV1eVLx4rkZtus9EUhe50KGhFBEHaA&s");
-    /* background-size: ; */
+    background-size: cover;
+
     background-repeat: no-repeat;
-    background-size: 777px;
+
     background-position: center;
     background-attachment: fixed;
 }
@@ -41,53 +40,67 @@ a {
 
 
 h1 {
-    color: rgb(5, 5, 5);
+    color: rgb(224, 123, 123);
 
 }
 
-h2 {
-text-align: left
-
-;
-
-}
 
 p {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: large;
+    /* /* font-size */ */: large;
     color: rgb(10, 1, 18);
 
 }
 
 .project-img {
-    border: 2px groove rgb(10,10,10);
+    border: 2px groove rgb(10, 10, 10);
     border-radius: 4% / 4%;
 }
 
+section {
+    border: 2px groove;
+    margin: 2px;
+    padding: 2px;
+    background: black;
+    /* display: flex; */
+
+}
+
 article {
-    height: 20vh;
+    height: 24vh;
     display: flex;
     flex-direction: row;
     justify-content: end;
     align-items: flex-start;
-    font-size: 12px;
+    /* /* /* font-size */ */: 12px; */
     /* text-align: right; */
-    margin: 7px;
+    margin: 8px;
     border: 4px solid;
     padding: 4px 4px;
     background-color: rgb(134, 130, 145);
 
 }
 
-h4 {
+h2 {
     text-align: center;
+    background-color: aquamarine;
 
 
 }
 
 footer {
-    font-size: large;
-    color: rgb(80, 158, 28);
+    color: rgb(255, 255, 255);
     text-align: center;
 
 }
+
+/* When the browser is at least 600px and above */
+@media screen and (min-width: 640px) {
+    header {
+      /* Apply some styles */
+      height: 32vh;
+      flex-direction: row;
+    }
+  }
+
+  
