--- a/assets/style.css
+++ b/assets/style.css
@@ -1,48 +1,29 @@
 * {
 
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+   
 }
 
-header {
+
+
+ a { 
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    /* align-items: flex-start; */
-    height: 22vh;
-    padding: 4px 4px;
-    margin: 2px 2px 2px 2px;
-    border: 4px groove rgb(5, 5, 5);
-    /* text-align: center; */
-    font-family: Arial, Helvetica, sans-serif;
-    color: rgb(2, 1, 1);
-    background-color: rgb(15, 0, 148);
-    opacity: 0.9;
-
-}
-
+    display: grid;
+    color: black;
+    align-items: flex-end;
+   
+ }
 
 body {
     background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEjL-lsV1eVLx4rkZtus9EUhe50KGhFBEHaA&s");
     background-size: cover;
-
     background-repeat: no-repeat;
-
     background-position: center;
     background-attachment: fixed;
 }
 
-a {
-    color: rgb(2, 1, 1);
-
-}
+    
 
 
-h1 {
-    color: rgb(224, 123, 123);
-
-}
 
 
 p {
@@ -55,38 +36,9 @@ p {
 .project-img {
     border: 2px groove rgb(10, 10, 10);
     border-radius: 4% / 4%;
+    size: 7px;
 }
 
-section {
-    border: 2px groove;
-    margin: 2px;
-    padding: 2px;
-    background: black;
-    /* display: flex; */
-
-}
-
-article {
-    height: 24vh;
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    align-items: flex-start;
-    /* /* /* font-size */ */: 12px; */
-    /* text-align: right; */
-    margin: 8px;
-    border: 4px solid;
-    padding: 4px 4px;
-    background-color: rgb(134, 130, 145);
-
-}
-
-h2 {
-    text-align: center;
-    background-color: aquamarine;
-
-
-}
 
 footer {
     color: rgb(255, 255, 255);
@@ -103,4 +55,70 @@ footer {
     }
   }
 
-  
+
+  header {
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: #2a607c;
+    color: #ffffff;
+}
+
+
+header nav {
+    padding-top: 5px;
+    padding-bottom: 5px;
+    margin-right: 2px;
+    float: right;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+}
+
+
+header nav ul li {
+    display: inline-block;
+    margin-right: 100px;
+}
+
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+main {
+    padding-left: 2px;
+    padding-right: 2px;
+    padding-bottom: 2px;
+    padding-top: 2px;
+    margin-top: 2px;
+    margin-left: 2px;
+    margin-right: 2px;
+    margin-bottom: 2px;
+    position: relative;
+    border-right: 77;
+    border: 4px groove rgb(248, 239, 239);
+    color: aliceblue(36, 50, 63);
+    background-image:url(://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fhtml-5_174854&psig=AOvVaw2qmMViO88lGvNsNAQdUH9J&ust=1718134086049000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIjr2LHi0YYDFQAAAAAdAAAAABAE)
+    
+
+}
+h1 {
+    text-align: center;
+    color: aliceblue;
+}
+
+h2,h3,h4 {
+    text-align: center;
+    color:aliceblue;
+    padding-left: 1px;
+    padding-right: 7px;
+    padding-bottom: 7px;
+    padding-top: 7px;
+    margin-top: 5px;
+    margin-left: 888px;
+    margin-right: px;
+    margin-bottom: px;
+
+    border-right: 77;
+    border: 4px groove rgb(248, 239, 239);
+    color: aliceblue(36, 50, 63);
+    
+
+}
