--- a/assets/style.css
+++ b/assets/style.css
@@ -1,94 +1,213 @@
 * {
-
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-  body {
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQEjL-lsV1eVLx4rkZtus9EUhe50KGhFBEHaA&s");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
-}
-@media screen and (min-width: 640px) {
-    header {
-        font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-        background-color: #2a607c;
-        color: #ffffff;
-      height: 32vh;
-      flex-direction: row;
-    }
-  }
-
-  header nav {
-    padding-top: 5px;
-    padding-bottom: 5px;
-    margin-right: 2px;
-    float: right;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 20px;
-}
-header nav ul li {
-    display: inline-block;
-    margin-right: 100px;
-}
-    a { 
-    display: grid;
-    color: black;
-    align-items: flex-end;
-
-    }
- 
- h1 {
-    text-align: center;
-    color: aliceblue;
+body {
+  background-color: #d9dcd6;
 }
 
-.project-img {
-    border: 2px groove rgb(10, 10, 10);
-    border-radius: 4% / 4%;
-    size: 7px;
+header {
+  padding: 20px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  background-color: #2a607c;
+  color: #ffffff;
+  display: flex;
 }
 
-main {
-    padding-left: 2px;
-    padding-right: 2px;
-    padding-bottom: 2px;
-    padding-top: 2px;
-    margin-top: 2px;
-    margin-left: 2px;
-    margin-right: 2px;
-    margin-bottom: 2px;
-    position: relative;
-    border-right: 77;
-    border: 4px groove rgb(248, 239, 239);
-    color: aliceblue(36, 50, 63);
-    background-image:url(://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.com%2Ffree-icon%2Fhtml-5_174854&psig=AOvVaw2qmMViO88lGvNsNAQdUH9J&ust=1718134086049000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCIjr2LHi0YYDFQAAAAAdAAAAABAE)
-
+header h1 {
+  display: inline-block;
+  font-size: 48px;
 }
-h2,h3,h4 {
-    text-align: center;
-    color:aliceblue;
-    padding-left: 1px;
-    padding-right: 7px;
-    padding-bottom: 7px;
-    padding-top: 7px;
-    margin-top: 5px;
-    margin-left: 888px;
-    margin-right: px;
-    margin-bottom: px;
-
-    border-right: 77;
-    border: 4px groove rgb(248, 239, 239);
-    color: aliceblue(36, 50, 63);
-
+.hero {
+  text-align: center;
 }
 
-h5 {
-    color: aliceblue;
-    text-align: center;
+h1 {
+  text-align: center;
 }
-footer {
-    color: rgb(255, 255, 255);
-    text-align: center;
 
+#personal_image {
+  flex: 70%;
+}
+
+nav {
+  flex: 30%;
+}
+
+#Project {
+  color: #0072bb;
+}
+
+.header h1 .seo {
+  color: #d9dcd6;
+}
+
+.header div {
+  padding-top: 15px;
+  margin-right: 20px;
+  float: right;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  font-size: 20px;
+}
+
+.header div ul {
+  list-style-type: none;
+}
+
+.header div ul li {
+  display: inline-block;
+  margin-left: 25px;
+}
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+p {
+  font-size: 16px;
+}
+
+.float-left {
+  float: left;
+  margin-right: 25px;
+}
+
+.float-right {
+  float: right;
+  margin-left: 25px;
+}
+
+.content {
+  width: 75%;
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.benefits {
+  margin-right: 20px;
+  padding: 20px;
+  clear: both;
+  float: right;
+  width: 20%;
+  height: 100%;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #2589bd;
+}
+
+.benefit-lead {
+  margin-bottom: 32px;
+  color: #ffffff;
+}
+
+.benefit-brand {
+  margin-bottom: 32px;
+  color: #ffffff;
+}
+
+.benefit-cost {
+  margin-bottom: 32px;
+  color: #ffffff;
+}
+
+.benefit-lead h3 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.benefit-brand h3 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.benefit-cost h3 {
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+.benefit-lead img {
+  display: block;
+  margin: 10px auto;
+  max-width: 150px;
+}
+
+.benefit-brand img {
+  display: block;
+  margin: 10px auto;
+  max-width: 150px;
+}
+
+.benefit-cost img {
+  display: block;
+  margin: 10px auto;
+  max-width: 150px;
+}
+
+.search-engine-optimization {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+
+.online-reputation-management {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+
+.social-media-marketing {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+}
+
+.search-engine-optimization img {
+  max-height: 200px;
+}
+
+.online-reputation-management img {
+  max-height: 200px;
+}
+
+.social-media-marketing img {
+  max-height: 200px;
+}
+
+.search-engine-optimization h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
+.online-reputation-management h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
+.social-media-marketing h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+}
+
+.footer {
+  padding: 30px;
+  clear: both;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  text-align: center;
+}
+
+.footer h2 {
+  font-size: 20px;
 }
